# awx_inventory

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  README.md  inventory.py  setup.cfg  setup.py
.github/: dependabot.yml
awx_inventory/: awx_inventory.py
awx_inventory/test/: __init__.py  test_awxInventory.py
awxinventory/: awxinventory.py
awxinventory/test/: test_awxInventory.py
test/: __init__.py  test-requirements.txt  test_awxInventory.py
