[metadata]
name = awx_inventory
author = Clayton Black
license = 'GPLv3+'
Summary = Package for building dynamic ansible inventories.
long_description = file: README.md
long_description_content_type = text/markdown
url = 'https://github.com/cblack34/awx_inventory'
required-python = >=3.6
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Topic :: Utilities
keywords = ansible, awx, inventory
package_dir = awx_inventory
